corrected some styling issues

--- a/src/styling/ByteMobile.css
+++ b/src/styling/ByteMobile.css
@@ -36,12 +36,13 @@
 /* Carousel container */
 .slider-carousel {
   position: relative;
-  height: 750px;
+  height: 600px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  
 }
 
 /* Carousel images style */
@@ -100,7 +101,7 @@
 .slider-button button {
   background-color: #4f46e5;
   color: white;
-  padding: 0.7rem 1.8rem;
+  padding: 0.7rem 1.5rem;
   font-size: 1.1rem;
   font-weight: 600;
   border: none;
@@ -113,10 +114,19 @@
   background-color: #6366f1;
 }
 
+@media only screen and (min-width: 1441px) {
+  
+  .carousel-img {
+    max-width: 380px;
+    max-height: 550px;
+  }
+
+}
+
 @media (min-width: 1025px) and (max-width: 1440px) {
 
   .showcase-links {
-    margin-top: 60px; /* adjust this number to move it closer */
+    margin-top: 0px;
   }
 
 
@@ -126,12 +136,13 @@
   }
 
   .slider-carousel {
-    height: 600px;
-    width: 100%;
-
-  }
-
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
+}
+
+
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
@@ -145,12 +156,32 @@
 
   }
 
+  .slider-button button {
+    padding: 0.5rem 1.0rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 8px;
+  }
+  .slider-button {
+    margin-top: 1rem;
+  }
+
 }
 
-/* Responsive styling for smaller screens */
+/* mobile */
 @media only screen and (max-width: 767px) {
   .slider-carousel {
-    height: 420px;
+    height: 350px;
+  }
+
+  .slider-button button {
+    padding: 0.5rem 1.0rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 8px;
+  }
+  .slider-button {
+    margin-top: 1rem;
   }
 
   .carousel-img {
