--- a/src/styling/ByteMobile.css
+++ b/src/styling/ByteMobile.css
@@ -65,15 +65,17 @@
 }
 
 .slider-text h1 {
-  font-size: 2.5rem;
-  margin-bottom: 1.5rem;
-  font-weight: 700;
+  font-size: 2rem;
+  text-align: left;
+  margin-bottom: 1rem;
+  font-weight: 600;
   color: #e0e7ff;
 }
 
 .slider-text p {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   margin-bottom: 1rem;
+  text-align: left;
   line-height: 1.5;
   color: #cbd5e1;
 }
@@ -82,9 +84,10 @@
   list-style: disc;
   padding-left: 1.5rem;
   text-align: left;
-  max-width: 600px;
+
   margin: 0 auto;
   color: #cbd5e1;
+  color: #a5b4fc; 
 }
 
 .slider-text ul li {
@@ -112,6 +115,10 @@
 
 .slider-button button:hover {
   background-color: #6366f1;
+}
+
+.project-name {
+  color: #22d3ee;
 }
 
 @media only screen and (min-width: 1441px) {
