--- a/src/styling/Gleam.css
+++ b/src/styling/Gleam.css
@@ -1,6 +1,6 @@
 .gleam-showcase-container {
   position: relative;
-  background-color: #1A002A;
+  background-color: #36013F;
   padding: 4rem 2rem;
   overflow: hidden;
   display: flex;
