--- a/src/styling/ByteMobile.css
+++ b/src/styling/ByteMobile.css
@@ -2,10 +2,12 @@
 .image-slider-container {
   width: 100%;
   padding: 2rem 0;
-  background: black; /* dark blue background */
   color: white;
   display: flex;
   justify-content: center;
+  background: rgba(0,0,0,0.5);
+  padding: 2rem;
+  border-radius: 1rem;
 }
 
 /* Main flex column container for everything */
