--- a/src/styling/Gleam.css
+++ b/src/styling/Gleam.css
@@ -1,11 +1,13 @@
 .gleam-showcase-container {
   position: relative;
-  background-color: #36013F;
   padding: 4rem 2rem;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: rgba(0,0,0,0.5);
+  padding: 2rem;
+  border-radius: 1rem;
 }
 
 .gleam-showcase-links {
