--- a/src/styling/Aboutme.css
+++ b/src/styling/Aboutme.css
@@ -78,8 +78,9 @@
 }
 
 .flip-card {
-  width: 450px;
-  height: 550px;
+  width: 500px;
+  min-height: 650px;
+  height: auto;
   position: relative;
   cursor: pointer;
   transform-style: preserve-3d;
@@ -106,7 +107,6 @@
   background-color: rgba(0, 0, 0, 1);
 }
 
-/* Optional scrollbar styling */
 .flip-card-front::-webkit-scrollbar,
 .flip-card-back::-webkit-scrollbar {
   width: 6px;
